@@ -1,3 +1,6 @@
+2016-09-17  Kirit Saelensminde  <kirit@felspar.com>
+ * Add a middleware that logs the HTTP request details and some response details.
+
 2016-09-04  Kirit Saelensminde  <kirit@felspar.com>
  `fost.view.pathprefix` can now take an embedded configuration.
 
